Learned to handle events

--- a/18 Fragments/learning-fragment/src/components/Item.module.css
+++ b/18 Fragments/learning-fragment/src/components/Item.module.css
@@ -1,8 +1,13 @@
 .kg-item{
-   background-color: yellow;
+    font-weight: 500;
+    color: orange;
 }
 
 .kg-span{
     font-weight: 500;
     color: brown;
+}
+
+.button{
+    float: right;
 }
